kubernetes-exposeservice/assets/nodeport-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-np
  namespace: cde
  labels:
    component: api
spec:
  type: NodePort
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30081
