kubernetes-exposeservice/assets/nodeport-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-np
  namespace: leadgen
  labels:
    component: app
spec:
  type: NodePort
  selector:
    component: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
