kubernetes-exposeservice/assets/service-leadgen.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: leadgen
    labels:
        env: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: leadgen
  labels:
    component: app
spec:
  selector:
    matchLabels:
        component: app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
      - name: app-container
        image: avishnyakov/k8s-app-guid:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: leadgen
  labels:
    component: app
spec:
  selector:
    component: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: explorer
  namespace: leadgen
  labels:
    component: explorer
spec:
  containers:
  - name: explorer
    image: dolphm/network-tools
    command: ["/bin/sh", "-c", "sleep 3600;"]
