kubernetes-exposeservice/assets/cde-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cde-ingress
  namespace: cde
spec:
  rules:
  - host: cde.prospa.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 8080
