kubernetes-exposeservice/assets/leadgen-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: leadgen-ingress
  namespace: leadgen
spec:
  rules:
  - host: leadgen.prospa.com
    http:
      paths:
      - path: app
        backend:
          serviceName: app
          servicePort: 8080
